--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <h1>Xuper-Multipantalla-Tv</h1>
         <p>👇By * ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT © *👇</p>
-        <a href="https://t.me/+dfpRtJbQEGM3OWE0" class="telegram-button" target="_blank">
+        <a href="https://t.me/+zh3t00oNL-A5MGU0" class="telegram-button" target="_blank">
             <img src="https://i.postimg.cc/Hs4x4wkZ/representacion-3d-telegram-redes-sociales-304434-713-removebg-preview.png" alt="Telegram">
             Únete Al ᘜᖇOᑌᑭ ᙭ᑌᑭᗴᖇᒪIՏT 
         </a>      
